--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
